@someone now working at a basic level!

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ aio-pika
 PyYAML
 aiopg
 aiohttp
+git+git://github.com/Rapptz/discord.py.git@421d8bf8cae84b58b7242fd18f5583804de1e3e2
 git+git://github.com/NQN-Discord/rabbit_helper.git
